// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow deleting a label identifier view field 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Label identifier view field cannot be deleted",
              "userFriendlyMessage": "Label identifier view field cannot be deleted",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "viewId": Any<String>,
          },
          "status": "fail",
          "type": "update_view_field",
        },
      ],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while deleting view field",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow destroying a label identifier view field 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field to delete has not been soft deleted",
              "userFriendlyMessage": "View field to delete has not been soft deleted",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "status": "fail",
          "type": "delete_view_field",
        },
      ],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while deleting view field",
  "name": "GraphQLError",
}
`;
